The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2004-08-25 DAP       Prevent crash when non-superuser views database properties.
    <li>2004-08-18 AP        set PGPASSWORD environment for backup/restore
    <li>2004-08-18 AP        fix ACL for quoted user/group names
    <li>2004-08-15 AP        buglet cleanups
    <li>2004-08-11 AP        restore wizard
    <li>2004-08-11 AP        rework of ctlComboBox
    <li>2004-08-09 AP        server property
    <li>2004-08-05 AP        win32 service control
    <li>2004-08-05 AP        refactor tree context menu: create instead of en/disable items
    <li>2004-08-02 DP        Auto-discover locally installed servers when registered by the Win32 binary installer.
    <li>2004-07-30 AP        Tablespace usage fix for objects using the database's default tablespace
    <li>2004-07-27 AP        Reworked schema prefixing
    <li>2004-07-25 AP        support of pg_xxx_size if available
    <li>2004-07-21 AP        Improved disconnect handling
    <li>2004-07-21 AP        StatusBar with size handle for frmStatus, dlgFunction and dlgView
    <li>2004-07-21 AP        Update ServerStatus to pg_logdir_ls
    <li>2004-07-21 AP        catch SIGPIPE
    <li>2004-07-20 AP        owner, name, comment refactoring in dlgProperty
    <li>2004-07-20 AP        support of function parameters
    <li>2004-07-20 AP        tablespace changes
    <li>2004-07-19 AP        fix dependency display for tablespaces and users
    <li>2004-07-18 AP        Update ServerStatus to pg_logfiles_ls and pg_file_read/pg_file_length
    <li>2004-07-18 AP        Allow change of some function attributes