@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2004-08-29 AP        Sequence schema fix
     <li>2004-08-25 DAP       Prevent crash when non-superuser views database properties.
     <li>2004-08-18 AP        set PGPASSWORD environment for backup/restore
     <li>2004-08-18 AP        fix ACL for quoted user/group names
